<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/finalBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/orderData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmOrderButton"
        android:layout_width="293dp"
        android:layout_height="92dp"
        android:layout_marginBottom="30dp"
        android:text="@string/confirmorder"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesInput" />

    <TextView
        android:id="@+id/orderData"
        android:layout_width="295dp"
        android:layout_height="146dp"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/addressInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalBackButton" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="255dp"
        android:layout_height="72dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderData" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="255dp"
        android:layout_height="73dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/notesInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInput" />

    <EditText
        android:id="@+id/notesInput"
        android:layout_width="244dp"
        android:layout_height="94dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/confirmOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

</androidx.constraintlayout.widget.ConstraintLayout>