<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/orderButton"
        android:layout_width="293dp"
        android:layout_height="92dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/order"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryList"
        android:layout_width="407dp"
        android:layout_height="408dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/orderDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/orderdetails"
        app:layout_constraintBottom_toTopOf="@+id/categoriesText"
        app:layout_constraintEnd_toStartOf="@+id/clearOrderButton"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/clearorder"
        app:layout_constraintBottom_toBottomOf="@+id/orderDetailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderDetailsButton"
        app:layout_constraintTop_toTopOf="@+id/orderDetailsButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/categoriesText"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:text="@string/categories"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/categoryList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>