<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="307dp"
            android:layout_height="104dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/usernameInput"
            app:layout_constraintStart_toStartOf="@+id/usernameInput"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="388dp"
            android:layout_height="228dp"
            android:layout_marginTop="60dp"
            android:scaleX="1.35"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="307dp"
            android:layout_height="104dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginImage" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="293dp"
            android:layout_height="92dp"
            android:layout_marginBottom="60dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>